recebendo dados do formulario dialog, configurando API, rotas e funções, iniciando serviço de post do angular

--- a/resources/meuapp/src/app/app.component.html
+++ b/resources/meuapp/src/app/app.component.html
@@ -1,9 +1,13 @@
 <mat-toolbar color="primary">
-  <span>Projeto Laravel+Angular</span>
+	<span>Projeto Laravel+Angular</span>
 </mat-toolbar>
 
 <mat-divider></mat-divider>
 
-<button mat-fab color="primary" class="float-button">
+
+<div fxLayout="row wrap" fxLayoutAlign="space-between stretch" >
+	<app-post *ngFor="let p of posts" [post]="p"></app-post>
+</div>
+<button mat-fab color="primary" class="float-button" (click)="openDialog()">
 	<mat-icon>add</mat-icon>
 </button>
