--- a/resources/meuapp/src/app/post/post.component.html
+++ b/resources/meuapp/src/app/post/post.component.html
@@ -12,7 +12,9 @@
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button>LIKE</button>
+    <button mat-button color="primary" (click)="like()">LIKE</button>
+    <mat-icon color="warn" *ngIf="post.likes>0" [matBadge]="post.likes" 
+      matBadgePosition="above after" matBadgeColor="warn" matBadgeOverlap="false">favorite</mat-icon>
     <button mat-button>DELETAR</button>
   </mat-card-actions>
 </mat-card>
